<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context="com.example.islam.gergawi_test.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/addname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Name"
            android:inputType="textCapWords"
            />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/Topping"
             />

        <CheckBox
            android:id="@+id/checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/dark"
            android:paddingLeft="26dp"
            android:text="@string/whipped_cream"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <CheckBox
            android:id="@+id/chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/dark"
            android:paddingLeft="26dp"
            android:text="@string/Chocolate"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/Quantity"
             />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="49dp"
                android:layout_height="49dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:onClick="inCrement"
                android:text="+"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/quantity_text_view"
                style="@style/HeaderTextStyle"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical"
                android:text="1"

                />

            <Button
                android:id="@+id/button"
                android:layout_width="49dp"
                android:layout_height="49dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:onClick="deCrement"
                android:text="-"
                android:textSize="26sp" />
        </LinearLayout>

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="16dp"-->
        <!--android:text="Order Summary:"-->
        <!--android:textColor="#ffffff"-->
        <!--android:textSize="26sp" />-->

        <!--<TextView-->
        <!--android:id="@+id/order_summary_text_view"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="16dp"-->
        <!--android:text="$0"-->
        <!--android:textColor="#ffffff"-->
        <!--android:textSize="16sp" />-->


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="200dp"
            android:layout_marginLeft="8dp"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textSize="24sp" />


    </LinearLayout>
</ScrollView>